SaslAuth: Don't process stanzas received after disconnection

Fixes: <https://bugs.freedesktop.org/show_bug.cgi?id=35430>
Reviewed-by: Will Thompson <will.thompson@collabora.co.uk>